--- a/app/src/main/res/layout/activity_restaurants.xml
+++ b/app/src/main/res/layout/activity_restaurants.xml
@@ -11,7 +11,7 @@
 
     <include
         android:id="@+id/toolBar"
-        layout="@layout/actio_bar_base"
+        layout="@layout/action_bar_base"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
