--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB8qXeqVk1pFCq1vq3r_mOgywH4BlFJGho</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIz##################o</string>
 </resources>
